overflow hidden opinion fix
to test

--- a/src/input.css
+++ b/src/input.css
@@ -443,7 +443,7 @@
 
 .opinions {
   @apply h-auto;
-
+  @apply overflow-hidden;
 }
 
   .opinions article {
